<resources>
    <string name="app_name">Asistencia Utec</string>

    <string name="hint_carne">carné</string>
    <string name="hint_clave">clave</string>

    <string name="btn_entrar">Entrar</string>

    <string name="menu_asistencias">Asistencias</string>
    <string name="menu_logout">Salir</string>

    <string name="confirmacion_success">Asistencia Registrada exitosamente</string>
    <string name="confirmacion_prev_asistencia">Asistencia previamente Registrada</string>
    <string name="confirmacion_error_hora">ERROR: la clase no se imparte a esta hora.</string>
    <string name="confirmacion_error_dia">ERROR: la clase no se imparte este dia</string>
    <string name="confirmacion_error_qr">ERROR: el codigo QR no fue reconocido</string>
    <string name="confirmacion_error">Ocurrio un error de conexion</string>
    <string name="confirmacion_asignatura">Asignatura: </string>
    <string name="confirmacion_carne">Carne: </string>
    <string name="confirmacion_aula">Aula: </string>
    <string name="confirmacion_fecha">Fecha: </string>
    <string name="confirmacion_seccion">Seccion: </string>
    <string name="confirmacion_ciclo">Ciclo: </string>
    <string name="confirmacion_01">01</string>
    <string name="confirmacion_epro1">Estandares de Programacion</string>
    <string name="confirmacion_asem1">Assembly</string>


</resources>
