<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".Login">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginHorizontal="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:layout_gravity="center_horizontal"
            android:layout_width="120dp"
            android:layout_height="150dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/logo" />

        <AutoCompleteTextView
            android:id="@+id/edt_carne"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:digits="0123456789"
            android:maxLength="10"
            android:background="@drawable/roundcorners"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_carne"
            android:inputType="number"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edt_clave"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:background="@drawable/roundcorners"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_clave"
            android:inputType="textPassword"
            android:textSize="16sp"/>

        <Button
            android:layout_margin="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/btn_entrar"
            android:id="@+id/btn_entrar"
            android:background="@drawable/roundcorners"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>

</ScrollView>


</LinearLayout>
