<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".Confirmacion">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_margin="10dp"
            android:layout_marginTop="40dp"
            android:paddingBottom="30dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_gravity="center_horizontal"
                android:id="@+id/iv_image"
                android:src="@drawable/ic_check"
                android:layout_width="75dp"
                android:layout_height="75dp" />

            <TextView
                android:layout_margin="16dp"
                android:textSize="24sp"
                android:gravity="center"
                android:textColor="@color/success"
                android:textStyle="bold"
                android:id="@+id/tv_confirmacion"
                android:text="@string/confirmacion_success"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp" />



            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">



                <TextView
                    android:id="@+id/tv_c_carne"
                    android:text="@string/confirmacion_carne"
                    android:textSize="16sp"
                    android:padding="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

                <TextView
                    android:textSize="16sp"
                    android:padding="8dp"
                    android:textColor="@color/cvalue"
                    android:id="@+id/tv_carne"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>



            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">



                <TextView
                    android:id="@+id/tv_c_asignatura"
                    android:text="@string/confirmacion_asignatura"
                    android:textSize="16sp"
                    android:padding="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                     />

                <TextView
                    android:textSize="16sp"
                    android:padding="8dp"
                    android:textColor="@color/cvalue"
                    android:id="@+id/tv_asignatura"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">



                <TextView
                    android:id="@+id/tv_c_seccion"
                    android:text="@string/confirmacion_seccion"
                    android:textSize="16sp"
                    android:padding="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                     />

                <TextView
                    android:textSize="16sp"
                    android:padding="8dp"
                    android:textColor="@color/cvalue"
                    android:id="@+id/tv_seccion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">



                <TextView
                    android:id="@+id/tv_c_aula"
                    android:text="@string/confirmacion_aula"
                    android:textSize="16sp"
                    android:padding="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                     />

                <TextView
                    android:textSize="16sp"
                    android:padding="8dp"
                    android:textColor="@color/cvalue"
                    android:id="@+id/tv_aula"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">



                <TextView
                    android:id="@+id/tv_c_ciclo"
                    android:padding="8dp"
                    android:text="@string/confirmacion_ciclo"
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

                <TextView
                    android:textSize="16sp"
                    android:id="@+id/tv_ciclo"
                    android:padding="8dp"
                    android:textColor="@color/cvalue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">



                <TextView
                    android:id="@+id/tv_c_fecha"
                    android:padding="8dp"
                    android:text="@string/confirmacion_fecha"
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                     />

                <TextView
                    android:textSize="16sp"
                    android:id="@+id/tv_fecha"
                    android:padding="8dp"
                    android:textColor="@color/cvalue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</LinearLayout>