<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:padding="4dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



            <TextView
                android:text="@string/confirmacion_asignatura"
                android:textSize="16sp"
                android:padding="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <TextView
                android:id="@+id/a_tv_asignatura"
                android:textSize="16sp"
                android:padding="4dp"
                android:textColor="@color/cvalue"
                android:text="administracion de proyectos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



            <TextView
                android:text="@string/confirmacion_seccion"
                android:textSize="16sp"
                android:padding="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <TextView
                android:id="@+id/a_tv_seccion"
                android:text="01"
                android:textColor="@color/cvalue"
                android:textSize="16sp"
                android:padding="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



            <TextView
                android:text="@string/confirmacion_aula"
                android:textSize="16sp"
                android:padding="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <TextView
                android:id="@+id/a_tv_aula"
                android:text="SB-401"
                android:textColor="@color/cvalue"
                android:textSize="16sp"
                android:padding="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



            <TextView
                android:text="@string/confirmacion_fecha"
                android:padding="4dp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <TextView
                android:id="@+id/a_tv_fecha"
                android:textColor="@color/success"
                android:textSize="16sp"
                android:padding="4dp"
                android:text="10-Oct-2018 10:30:23 AM"
                android:layout_marginBottom="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>


    </LinearLayout>


    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/grey" />


</LinearLayout>